--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+title: Page Not Founds
 ---
 
 <style type="text/css" media="screen">
@@ -8,6 +9,7 @@ layout: default
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
+    padding: 120px 0px;
   }
   h1 {
     margin: 30px 0;
