--- a/404.html
+++ b/404.html
@@ -20,8 +20,8 @@ title: Page Not Founds
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1>🤔</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>페이지를 찾을 수 없습니다</strong></p>
+  <p>찾으시는 페이지가 삭제되었나봐요</p>
 </div>
